# orthanc-stl

./: .hgignore  CITATION.cff  CMakeLists.txt  NEWS  README
.reuse/: dep5
Resources/: CreateJavaScriptLibraries.sh  CreateThreeDist.sh  CreateThreeDist.txt  EmbedStaticAssets.py  Nexus.txt  SyncOrthancFolder.py
Resources/CMake/: 3DHOP.cmake  3dhop-4.3.patch  LibNiftiConfiguration.cmake  LibVtkConfiguration.cmake  NexusViewer-4.2.cmake  NexusViewer-4.3.cmake  NexusViewer-4.3.patch  NexusViewer.cmake  nexus-viewer-4.2.patch
Resources/CreateJavaScriptLibraries/: Dockerfile  build-o3dv.sh  build-three.sh
Resources/CreateThreeDist/: Dockerfile  build.sh
Resources/Nexus/: threejs.html
Sources/: Extent2D.cpp  Extent2D.h  OrthancExplorer.js  Plugin.cpp  ResourcesCache.cpp  ResourcesCache.h  STLToolbox.cpp  STLToolbox.h  StructurePolygon.cpp  StructurePolygon.h  StructureSet.cpp  StructureSet.h  StructureSetGeometry.cpp  StructureSetGeometry.h  Toolbox.cpp  Toolbox.h  VTKToolbox.cpp  VTKToolbox.h  Vector3D.cpp  Vector3D.h  viewer.html  viewer.js
WebApplications/: o3dv.html  o3dv.js  three.html  three.js
